fix: thread title text overflow problem

--- a/components/Threads/desktop/ThreadsList.module.scss
+++ b/components/Threads/desktop/ThreadsList.module.scss
@@ -36,6 +36,11 @@
   font-weight: 600;
   margin-bottom: 0.5rem;
   color: black;
+  width: 100%;
+  height: 1.75rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .previewContent {
